<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationSearch"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigationCreate"
        android:icon="@drawable/add_car_outlined"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigationTrips"
        android:icon="@drawable/reciept_outlined"
        android:title="@string/title_trips" />
    <item
        android:id="@+id/navigationChat"
        android:icon="@drawable/chat_outlined"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/profile_outlined"
        android:title="@string/title_profile" />

</menu>