<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".ui.create.create">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="153dp"
        android:src="@drawable/car_road"
        android:layout_marginTop="-20dp"
        android:layout_gravity="end"
        android:contentDescription="@string/car_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/create_trip"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge.Chare"
            android:textColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sub_heading4"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/buttonCont"
            style="@style/LargeButtonStyle"
            android:layout_marginBottom="20dp"
            android:text="@string/continue_create"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:src="@drawable/p4of5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            style="@style/preferenceStyle"
            android:layout_marginTop="52dp"
            android:text="@string/quiet_ride"
            app:icon="@drawable/volume_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button4"
            style="@style/preferenceStyle"
            android:layout_marginTop="52dp"
            android:text="@string/allow_pets"
            app:icon="@drawable/pets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button5"
            style="@style/preferenceStyle"
            android:layout_marginTop="5dp"
            android:text="@string/co_driving"
            app:icon="@drawable/icon_shared_driving"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button8"
            style="@style/preferenceStyle"
            android:layout_marginTop="5dp"
            android:text="@string/luggage"
            app:icon="@drawable/luggage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button9"
            style="@style/preferenceStyle"
            android:layout_marginTop="5dp"
            android:text="@string/ex_dep"
            app:icon="@drawable/schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button10"
            style="@style/preferenceStyle"
            android:layout_marginTop="5dp"
            android:text="@string/dir_only"
            app:icon="@drawable/icon_direct_transit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>