<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationSearch">

    <fragment
        android:id="@+id/navigationSearch"
        android:name="com.puma.chare.ui.search.search"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigationSearchResult"
        android:name="com.puma.chare.ui.search.SearchResults"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_results" >
    </fragment>

    <fragment
        android:id="@+id/navigationCreate"
        android:name="com.puma.chare.ui.create.Create"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigationTrips"
        android:name="com.puma.chare.ui.trips.trips"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigationChat"
        android:name="com.puma.chare.ui.chat.chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigationProfile"
        android:name="com.puma.chare.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile2" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.puma.chare.ui.login.ui.login.login"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_createUserFragment"
            app:destination="@id/createUserFragment" />
    </fragment>

    <fragment
        android:id="@+id/createUserFragment"
        android:name="com.puma.chare.ui.createUser.CreateUser"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_login" />

</navigation>