<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".ui.create.create">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="153dp"
        android:src="@drawable/car_road"
        android:layout_marginTop="-20dp"
        android:layout_gravity="end"
        android:contentDescription="@string/car_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sub_heading"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/create_trip"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge.Chare"
            android:textColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:maxLines="1"
            app:boxBackgroundColor="@color/White"
            app:boxStrokeColor="@color/DarkPurple"
            app:endIconDrawable="@drawable/location"
            app:endIconMode="custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            app:boxBackgroundColor="@color/White"
            app:boxStrokeColor="@color/DarkPurple"
            app:endIconDrawable="@drawable/location"
            app:endIconMode="custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputFran">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDatum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            app:boxBackgroundColor="@color/White"
            app:boxStrokeColor="@color/DarkPurple"
            app:endIconDrawable="@drawable/ic_outline_date_range_24"
            app:endIconMode="custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTill">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            app:boxBackgroundColor="@color/White"
            app:boxStrokeColor="@color/DarkPurple"
            app:endIconDrawable="@drawable/ic_baseline_access_time_24"
            app:endIconMode="custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDatum">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="@style/LargeButtonStyle"
            android:layout_marginTop="30dp"
            android:text="@string/continue_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTid" />
        <!--
        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"/>
        -->
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/p1of5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>