<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".ui.create.create">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="153dp"
        android:src="@drawable/car_road"
        android:layout_marginTop="-20dp"
        android:layout_gravity="end"
        android:contentDescription="@string/car_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/create_trip"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge.Chare"
            android:textColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sub_heading3"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"

            />

        <Button
            android:id="@+id/buttonCont"
            style="@style/LargeButtonStyle"
            android:layout_marginBottom="20dp"
            android:text="@string/continue_create"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:src="@drawable/p3of5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/LightestPurple"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/vehicle"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="186dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="'Bilmodell'"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="186dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="X liter bränsletyp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="186dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="per 100 km"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="186dp" />

            <Button
                style="@style/LargeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="78dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="0dp"
                android:text="@string/change_vehicle" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/car2" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/reem_kufi"
            android:textSize="20dp"
            android:textColor="@color/Black"
            android:text="@string/available_seats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/cost_example"
            android:textColor="@color/Black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Chare"
            android:textColor="@color/Black"
            android:textSize="18dp"
            android:text="X kr / mil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/DarkPurple"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            app:srcCompat="@drawable/ic_outline_edit_24" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/Black"
            android:textSize="12dp"
            android:text="@string/cost_clarify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="X kronor"
            android:textColor="@color/Black"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/White"
            android:drawableEnd="@drawable/ic_outline_info_24"
            android:drawableTint="@color/DarkPurple"
            android:fontFamily="@font/montserrat_medium"
            android:padding="0dp"
            android:paddingEnd="0dp"

            android:text="@string/btn_count"
            android:textAllCaps="false"
            android:textColor="@color/DarkPurple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>